# DiscVisionDeluxe

./: .gitattributes  .gitignore  DiscProjectile - Copy.cpp  DiscProjectile - Copy.h  README.md  README.txt  main.cpp  stuff to basecamp.txt
Binaries/dvd_DvisEst/2020-10-11/: dvd_DvisEst_abstractor.bat  dvd_DvisEst_abstractor_kill.bat  testme.bat
Binaries/dvd_DvisEst/2020-12-21/: dvd_DvisEst_abstractor.bat
Binaries/dvd_DvisEst/2022-08-19/: dvd_DvisEst_abstractor.bat  dvd_DvisEst_abstractor_kill.bat  testme.bat
DiscVision/: DiscVision.sln  DiscVision.uproject
DiscVision/Binaries/Win64/: DiscVisionEditor.target  UE4Editor.modules
DiscVision/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
DiscVision/Source/: DiscVision.Target.cs  DiscVisionEditor.Target.cs
DiscVision/Source/DiscVision/: DiscPlayer.cpp  DiscPlayer.h  DiscProjectile.cpp  DiscProjectile.h  DiscVision.Build.cs  DiscVision.cpp  FPSCharacter.cpp  FPSCharacter.h
common/inc/: disc_layouts.hpp  dvd_maths.hpp
dvd_DfisX/: CMakeLists.txt  Daero.cpp  Daero.hpp  DfisX.cpp  DfisX.hpp  Dgyro.cpp  Dgyro.hpp  Dio.cpp  Dio.hpp  Dpropagate.cpp  Dpropagate.hpp  Makefile  README.md  build command.txt  build with command line args.bat  build.bat  build.sh  cmd.lnk  command line args.bat  dfisx  disc_params.csv  disc_params.hpp  dothemakewin.bat  dvd_DfisX.Build.cs  main.cpp  simulated_throw.csv  test.cpp
dvd_DfisX/Private/: Daero.cpp  DfisX.cpp  DfisX.hpp  Dgyro.cpp  Dio.cpp  Dpropagate.cpp  Dpropagate.hpp  main.cpp
dvd_DfisX/Public/: Daero.hpp
dvd_DfisX/flight_saves/: saved_throw.csv
dvd_DgrafX/: DiscVisionDeluxeUE.uproject  README.md
dvd_DgrafX/Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
dvd_DgrafX/Content/: Discv01.uasset  Discv1_Cone.uasset  Discv1_Cylinder.uasset  Discv1_Torus.uasset  Fbx_Default_Material.uasset  FlightCurve.uasset  Sphere.uasset  aaa.uasset  icon_test.hdr
dvd_DgrafX/Content/Blueprints/: BP_CameraManager.uasset  BP_DVDUEGameModeBase.uasset  BP_DiscCharacter.uasset  BP_DiscProjectile.uasset  BP_DiscThrow.uasset  BP_FlightCurve.uasset  BP_FlightLog.uasset  BP_FlightLogDisplayDisc.uasset  BP_FollowFlight.uasset  BP_Player_Controller.uasset  BP_ThrowInputController.uasset  Character_state_logic.uasset  DefaultMaterial.uasset  DiscTExtureSAve.uasset  FollowFlight.uasset  Frisbee.uasset  vt_test.uasset
dvd_DgrafX/Content/Charater_models/: Beige.uasset  Belt.uasset  Black.uasset  Brown.uasset  Clothes.uasset  Details.uasset  Face.uasset  Goblin_Male.uasset  Goblin_Male_PhysicsAsset.uasset  Goblin_Male_Skeleton.uasset  Gold.uasset  Hair.uasset  Hat.uasset  Pants.uasset  Pirate_Female.uasset  Pirate_Female_PhysicsAsset.uasset  Pug.uasset  Pug_PhysicsAsset.uasset  Red.uasset  Shirt.uasset  Skin.uasset  Teeth.uasset  Wizard.uasset  Wizard_PhysicsAsset.uasset
dvd_DgrafX/Content/DiscStuff/: Basket_test.uasset  DefaultMaterial.uasset  Disc.uasset  DiscColor1.uasset  Discv01.fbx  Discv01.uasset  Discv1_Cone.uasset  Discv1_Cylinder.uasset  Discv1_Torus.uasset  Driver_mesh.uasset  Fairway_Mesh.uasset  FlightCurve.uasset  Frisbee.uasset  M_Frisbee.uasset  Material_001.uasset  Midrange_mesh.uasset  Putter_mesh.uasset  bag.uasset  bag1.uasset  billboard.uasset  discpaint_0011.uasset  driver.uasset  fairway.uasset  featherflag.uasset  frisbee2.uasset  midrange.uasset  putter.uasset  putter_OLD.uasset
dvd_DgrafX/Content/FX/: NewNiagaraSystem.uasset  (+1 more)
dvd_DgrafX/Source/: DiscVisionDeluxeUE.Target.cs  DiscVisionDeluxeUEEditor.Target.cs
dvd_DvisEst/: CMakeLists.txt  README.md  dothemake  dothemakewin  runme.bat  set_ground_plane.bat
dvd_DvisEst/inc/: dvd_DvisEst_apriltag.hpp  dvd_DvisEst_estimate.hpp  dvd_DvisEst_image_capture.hpp  dvd_DvisEst_image_processing.hpp  dvd_DvisEst_maths.hpp
dvd_DvisEst/lib/opencv/: checkout_opencv_here
dvd_DvisEst/lib/winlibpthread64/: pthread.h
dvd_DvisEst/sandbox/: full_process.sh
dvd_DvisEst/sandbox/apriltag_cpu_test/: Makefile
dvd_DvisEst/sandbox/apriltag_cpu_test/camera_cals/: cal2.yaml  camera_cal2000.yaml
dvd_DvisEst/sandbox/apriltag_cpu_test/src/: apriltag_cpu_test.cpp
dvd_DvisEst/sandbox/apriltag_gpu_test/: Makefile  apriltag_gpu.h  apriltag_gpu_test.cu
dvd_DvisEst/sandbox/apriltag_gpu_test/inc/: apriltag_gpu.h
dvd_DvisEst/sandbox/apriltag_gpu_test/src/: apriltag_gpu_test.cu
dvd_DvisEst/sandbox/blackflyframecapture/: GrabFrames522.cpp  GrabFrames522_failedSpinnakerObjectVersion.cpp  Makefile
dvd_DvisEst/sandbox/camera_calibration/: Makefile  generate_cal.sh  random_cal_images.sh  settings.xml
dvd_DvisEst/sandbox/camera_calibration/src/: camera_calibration_from_jpegs.cpp  camera_calibration_stream.cpp
dvd_DvisEst/sandbox/undistort_images/: Makefile  camera_cal_sample.yaml
dvd_DvisEst/sandbox/undistort_images/camera_cals/: camera_cal800.yaml
dvd_DvisEst/sandbox/undistort_images/src/: undistort_images.cpp
dvd_DvisEst/src/: dvd_DvisEst_apriltag.cpp  dvd_DvisEst_estimate.cpp  dvd_DvisEst_image_capture.cpp  dvd_DvisEst_image_processing.cpp  main.cpp
dvd_DwinTest/: CMakeLists.txt  dothemakewin  dothemakewin.bat
dvd_DwinTest/inc/: dvd_DvisEst_apriltag.hpp  dvd_DvisEst_image_capture.hpp  dvd_DvisEst_image_processing.hpp
dvd_DwinTest/src/: dvd_DvisEst_apriltag.cpp  dvd_DvisEst_image_capture.cpp  dvd_DvisEst_image_processing.cpp  main.cpp
matlab/models/: disc_dome_form_drag.m  dvd_DfisX_drag_of_rotating_disc_pitching.m  dvd_DfisX_form_drag_and_stall_drag_comparison.m  dvd_DfisX_rotational_drag.m  dvd_DvisEst_KF_on_log.m  dvd_DvisEst_KF_runner.m  dvd_DvisEst_KF_syms.m  dvd_DvisEst_plot_disc_meas.m  fit_line_2d.m  gaussrand.m
matlab/scratch/: check_aoa_maths.m  get_rim_dome_height_functions_for_pdga_dataset.m  pdga-approved-disc-golf-discs.csv  pdga_cutdown.ods
matlab/utils/: parse_discmold_csvs.m
matlab/visualizers/: calc_fft.m  dvd_DfisX_plot_disc_trajectory.m  dvd_DvisEst_load_csv_log.m  dvd_DvisEst_plot_disc_meas.m  plot_test_log_kfstate.m
resources/: README.md  apriltag_disctemplate.psd  sample_ground_plane.yaml  windyday_ground_plane0.yaml  windyday_ground_plane1.yaml  windyday_ground_plane2.yaml
(+453 files in other folders)
